argocd/k8s/portal-real/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-test-ingress 
  annotations:
    cert-manager.io/issuer: "letsencrypt-front"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test-pink.nexthop.com.au 
    secretName: front-test-tls
  rules:
  - host: test-pink.nexthop.com.au 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-test-ingress 
  annotations:
    cert-manager.io/issuer: "letsencrypt-back"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apitest-pink.nexthop.com.au 
    secretName: back-test-tls
  rules:
  - host: apitest-pink.nexthop.com.au 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8002
