argocd/k8s/portal-real/overlays/test/policy-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-deny-egress
  namespace: test 
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - {}
  egress: []
